--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
   <section>
     <h2>About Us</h2>
-    <p>MyNaitwok Channels (MNC) is a full-service digital marketing & media agency helping businesses grow through innovative storytelling, strategic content, and impactful advertising. We offer end-to-end services in Digital Advertising, Media Production, Branding, PR, Television Placements, and Print Media Campaigns.</p>
+    <p>MyNaitwok Channels (MNC) is a full-service digital marketing & media agency helping businesses grow through innovative storytelling, strategic content, and impactful advertising. We offer end-to-end services in Digital Advertising, Media Production, Branding, and PR.</p>
   </section>
 
   <section>
@@ -81,7 +81,7 @@
       </div>
       <div class="card">
         <h3>Advertising</h3>
-        <p>Billboards, Bus Branding, Banners, Market Activations, Flyers, Newspapers, Magazines, and Television Ads</p>
+        <p>Billboards, Bus Branding, Banners, Market Activations, Flyers</p>
       </div>
       <div class="card">
         <h3>Content Creation</h3>
@@ -97,21 +97,10 @@
   <section>
     <h2>Sample Projects</h2>
     <ul>
+      <li><strong>FotoBobo:</strong> 5-week digital campaign reaching 1.2M+ audience</li>
+      <li><strong>Sacmi Nigeria @ Propack:</strong> Event video + interview coverage</li>
+      <li><strong>Montana Industries:</strong> Event documentation and promo cut</li>
       <li><strong>Women in Renewable:</strong> Clean Cookstove Campaign (10k+ reach)</li>
-      <li><strong>Smiling Simon Greenbuild Foundation:</strong> Sustainability advocacy & media engagement</li>
-    </ul>
-  </section>
-
-  <section>
-    <h2>Media Partners</h2>
-    <ul>
-      <li>NTA</li>
-      <li>TVC</li>
-      <li>Channels TV</li>
-      <li>Arise TV</li>
-      <li>ThisDay Newspaper</li>
-      <li>Trydoes</li>
-      <li>Studio 24</li>
     </ul>
   </section>
 
