--- a/index.html
+++ b/index.html
@@ -6,22 +6,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MyNaitwok Channels (MNC) Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
   <style>
     body {
       font-family: 'Poppins', sans-serif;
       margin: 0;
-      background: #f4f4f4;
+      background: #ffffff;
       color: #333;
     }
     header {
-      background: #111;
+      background: linear-gradient(to right, #001a9c, #004fff);
       color: #fff;
-      padding: 40px 20px;
-      text-align: center;
+      padding: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
+    header img {
+      height: 60px;
     }
     header h1 {
       margin: 0;
-      font-size: 2.5rem;
+      font-size: 2rem;
+      animation: slideIn 1.5s ease-out;
+    }
+    header p {
+      margin: 5px 0 0;
+      font-weight: 300;
     }
     section {
       padding: 40px 20px;
@@ -30,7 +42,7 @@
     }
     h2 {
       color: #111;
-      border-bottom: 2px solid #ff7f00;
+      border-bottom: 2px solid #004fff;
       display: inline-block;
       margin-bottom: 20px;
     }
@@ -42,8 +54,13 @@
     .card {
       background: white;
       padding: 20px;
-      border-radius: 12px;
+      border-left: 5px solid #004fff;
+      border-radius: 8px;
       box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease;
+    }
+    .card:hover {
+      transform: translateY(-5px);
     }
     .footer {
       text-align: center;
@@ -52,68 +69,93 @@
       padding: 20px;
     }
     a {
-      color: #ff7f00;
+      color: #004fff;
       text-decoration: none;
+    }
+    @keyframes slideIn {
+      0% { transform: translateY(-20px); opacity: 0; }
+      100% { transform: translateY(0); opacity: 1; }
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>MyNaitwok Channels (MNC)</h1>
-    <p>Digital Marketing | Media Production | Advertising</p>
+    <img src="logo.png" alt="MNC Logo" />
+    <div>
+      <h1>MyNaitwok Channels (MNC)</h1>
+      <p>Digital Marketing | Media Production | Advertising</p>
+    </div>
   </header>
 
-  <section>
+  <section data-aos="fade-up">
     <h2>About Us</h2>
-    <p>MyNaitwok Channels (MNC) is a full-service digital marketing & media agency helping businesses grow through innovative storytelling, strategic content, and impactful advertising. We offer end-to-end services in Digital Advertising, Media Production, Branding, and PR.</p>
+    <p>MyNaitwok Channels (MNC) is a full-service digital marketing & media agency helping businesses grow through innovative storytelling, strategic content, and impactful advertising. We offer end-to-end services in Digital Advertising, Media Production, Branding, PR, Television Placements, and Print Media Campaigns.</p>
   </section>
 
-  <section>
-    <h2>Our Services</h2>
+  <section data-aos="fade-up">
+    <h2>Our Mission, Vision & Values</h2>
     <div class="grid">
-      <div class="card">
-        <h3>Digital Marketing</h3>
-        <p>Social Media Ads, Google Ads, Email Marketing, Analytics & Strategy</p>
+      <div class="card" data-aos="zoom-in">
+        <h3>Our Mission</h3>
+        <p>To empower brands and organizations through strategic storytelling, visual excellence, and impactful digital communication.</p>
       </div>
-      <div class="card">
-        <h3>Media Production</h3>
-        <p>Corporate Videos, Reels, Documentaries, Event Photography, Portraits</p>
+      <div class="card" data-aos="zoom-in">
+        <h3>Our Vision</h3>
+        <p>To be Africa’s most trusted and creative media and advertising company, redefining how businesses grow and connect with their audience.</p>
       </div>
-      <div class="card">
-        <h3>Advertising</h3>
-        <p>Billboards, Bus Branding, Banners, Market Activations, Flyers</p>
-      </div>
-      <div class="card">
-        <h3>Content Creation</h3>
-        <p>Content Calendars, Graphic Design, Captions, Memes, GIFs</p>
-      </div>
-      <div class="card">
-        <h3>Influencer Campaigns & PR</h3>
-        <p>Press, Reputation Management, Influencer Strategy & Management</p>
+      <div class="card" data-aos="zoom-in">
+        <h3>Our Core Values</h3>
+        <p>Creativity. Integrity. Excellence. Innovation. Collaboration.</p>
       </div>
     </div>
   </section>
 
-  <section>
+  <section data-aos="fade-up">
+    <h2>Our Services</h2>
+    <div class="grid">
+      <div class="card"><h3>Digital Marketing</h3><p>Social Media Ads, Google Ads, Email Marketing, Analytics & Strategy</p></div>
+      <div class="card"><h3>Media Production</h3><p>Corporate Videos, Reels, Documentaries, Event Photography, Portraits</p></div>
+      <div class="card"><h3>Advertising</h3><p>Billboards, Bus Branding, Banners, Flyers, Newspapers, Magazines, Television Ads</p></div>
+      <div class="card"><h3>Content Creation</h3><p>Content Calendars, Graphic Design, Captions, Memes, GIFs</p></div>
+      <div class="card"><h3>Influencer Campaigns & PR</h3><p>Press, Reputation Management, Influencer Strategy & Management</p></div>
+    </div>
+  </section>
+
+  <section data-aos="fade-up">
     <h2>Sample Projects</h2>
     <ul>
-      <li><strong>FotoBobo:</strong> 5-week digital campaign reaching 1.2M+ audience</li>
-      <li><strong>Sacmi Nigeria @ Propack:</strong> Event video + interview coverage</li>
-      <li><strong>Montana Industries:</strong> Event documentation and promo cut</li>
       <li><strong>Women in Renewable:</strong> Clean Cookstove Campaign (10k+ reach)</li>
+      <li><strong>Smiling Simon Greenbuild Foundation:</strong> Sustainability advocacy & media engagement</li>
     </ul>
   </section>
 
-  <section>
+  <section data-aos="fade-up">
+    <h2>Media Partners</h2>
+    <ul>
+      <li>NTA</li>
+      <li>TVC</li>
+      <li>Channels TV</li>
+      <li>Arise TV</li>
+      <li>ThisDay Newspaper</li>
+      <li>Trydoes</li>
+      <li>Studio 24</li>
+    </ul>
+  </section>
+
+  <section data-aos="fade-up">
     <h2>Contact Us</h2>
-    <p><strong>Email:</strong> mynaitwokchannels@gmail.com</p>
-    <p><strong>Phone:</strong> +234 (Your Number)</p>
+    <p><strong>Email:</strong> info.MNC24@gmail.com</p>
+    <p><strong>WhatsApp:</strong> +2348169075834</p>
+    <p><strong>Call:</strong> +2348127285194</p>
     <p><strong>Location:</strong> Lagos, Nigeria</p>
-    <p><strong>Portfolio Link:</strong> <a href="https://sites.google.com/view/mjmedia-portfolio?usp=sharing" target="_blank">View Samples</a></p>
+    <p><strong>Portfolio:</strong> Available on request</p>
   </section>
 
   <div class="footer">
     &copy; 2025 MyNaitwok Channels (MNC). All Rights Reserved.
   </div>
+
+  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+  <script>AOS.init();</script>
 </body>
 </html>
