--- a/index.html
+++ b/index.html
@@ -1,161 +1,170 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MyNaitwok Channels (MNC) Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
-  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>MyNaitwok Channels (MNC)</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
   <style>
     body {
-      font-family: 'Poppins', sans-serif;
-      margin: 0;
-      background: #ffffff;
+      font-family: "Poppins", sans-serif;
       color: #333;
     }
-    header {
+    .navbar {
+      background: linear-gradient(to right, #f04a00, #002aff);
+    }
+    .navbar-brand img {
+      height: 40px;
+      margin-right: 10px;
+    }
+    .nav-link, .btn-primary {
+      color: #fff !important;
+    }
+    .nav-link:hover {
+      color: #004fff !important;
+    }
+    .hero {
       background: linear-gradient(to right, #001a9c, #004fff);
-      color: #fff;
-      padding: 20px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      flex-wrap: wrap;
+      color: white;
+      padding: 80px 20px;
+      text-align: center;
     }
-    header img {
-      height: 60px;
+    .btn-call {
+      background-color: #f04a00;
+      border: none;
     }
-    header h1 {
-      margin: 0;
-      font-size: 2rem;
-      animation: slideIn 1.5s ease-out;
-    }
-    header p {
-      margin: 5px 0 0;
-      font-weight: 300;
-    }
-    section {
-      padding: 40px 20px;
-      max-width: 1000px;
-      margin: auto;
-    }
-    h2 {
-      color: #111;
-      border-bottom: 2px solid #004fff;
-      display: inline-block;
-      margin-bottom: 20px;
-    }
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 20px;
+    .btn-call:hover {
+      background-color: #c73800;
     }
     .card {
-      background: white;
-      padding: 20px;
       border-left: 5px solid #004fff;
       border-radius: 8px;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-      transition: transform 0.3s ease;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
-    .card:hover {
-      transform: translateY(-5px);
-    }
-    .footer {
-      text-align: center;
+    footer {
       background: #111;
       color: white;
-      padding: 20px;
+      padding: 40px 20px;
     }
-    a {
-      color: #004fff;
+    footer h5 {
+      color: #f04a00;
+      margin-bottom: 20px;
+    }
+    footer a {
+      color: #f04a00;
       text-decoration: none;
     }
-    @keyframes slideIn {
-      0% { transform: translateY(-20px); opacity: 0; }
-      100% { transform: translateY(0); opacity: 1; }
+    footer a:hover {
+      text-decoration: underline;
+    }
+    .footer-bottom {
+      border-top: 1px solid #333;
+      padding-top: 15px;
+      margin-top: 20px;
+      text-align: center;
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
-  <header>
-    <img src="logo.png" alt="MNC Logo" />
-    <div>
-      <h1>MyNaitwok Channels (MNC)</h1>
-      <p>Digital Marketing | Media Production | Advertising</p>
+
+<!-- Header with animation -->
+<nav class="navbar navbar-expand-lg navbar-dark" data-aos="fade-down" data-aos-duration="1000">
+  <div class="container">
+    <a class="navbar-brand d-flex align-items-center" href="#">
+      <img src="logo.png" alt="MNC Logo" />
+      <span>MyNaitwok Channels (MNC)</span>
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+        <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+      </ul>
     </div>
-  </header>
-
-  <section data-aos="fade-up">
-    <h2>About Us</h2>
-    <p>MyNaitwok Channels (MNC) is a full-service digital marketing & media agency helping businesses grow through innovative storytelling, strategic content, and impactful advertising. We offer end-to-end services in Digital Advertising, Media Production, Branding, PR, Television Placements, and Print Media Campaigns.</p>
-  </section>
-
-  <section data-aos="fade-up">
-    <h2>Our Mission, Vision & Values</h2>
-    <div class="grid">
-      <div class="card" data-aos="zoom-in">
-        <h3>Our Mission</h3>
-        <p>To empower brands and organizations through strategic storytelling, visual excellence, and impactful digital communication.</p>
-      </div>
-      <div class="card" data-aos="zoom-in">
-        <h3>Our Vision</h3>
-        <p>To be Africa’s most trusted and creative media and advertising company, redefining how businesses grow and connect with their audience.</p>
-      </div>
-      <div class="card" data-aos="zoom-in">
-        <h3>Our Core Values</h3>
-        <p>Creativity. Integrity. Excellence. Innovation. Collaboration.</p>
-      </div>
-    </div>
-  </section>
-
-  <section data-aos="fade-up">
-    <h2>Our Services</h2>
-    <div class="grid">
-      <div class="card"><h3>Digital Marketing</h3><p>Social Media Ads, Google Ads, Email Marketing, Analytics & Strategy</p></div>
-      <div class="card"><h3>Media Production</h3><p>Corporate Videos, Reels, Documentaries, Event Photography, Portraits</p></div>
-      <div class="card"><h3>Advertising</h3><p>Billboards, Bus Branding, Banners, Flyers, Newspapers, Magazines, Television Ads</p></div>
-      <div class="card"><h3>Content Creation</h3><p>Content Calendars, Graphic Design, Captions, Memes, GIFs</p></div>
-      <div class="card"><h3>Influencer Campaigns & PR</h3><p>Press, Reputation Management, Influencer Strategy & Management</p></div>
-    </div>
-  </section>
-
-  <section data-aos="fade-up">
-    <h2>Sample Projects</h2>
-    <ul>
-      <li><strong>Women in Renewable:</strong> Clean Cookstove Campaign (10k+ reach)</li>
-      <li><strong>Smiling Simon Greenbuild Foundation:</strong> Sustainability advocacy & media engagement</li>
-    </ul>
-  </section>
-
-  <section data-aos="fade-up">
-    <h2>Media Partners</h2>
-    <ul>
-      <li>NTA</li>
-      <li>TVC</li>
-      <li>Channels TV</li>
-      <li>Arise TV</li>
-      <li>ThisDay Newspaper</li>
-      <li>Trydoes</li>
-      <li>Studio 24</li>
-    </ul>
-  </section>
-
-  <section data-aos="fade-up">
-    <h2>Contact Us</h2>
-    <p><strong>Email:</strong> info.MNC24@gmail.com</p>
-    <p><strong>WhatsApp:</strong> +2348169075834</p>
-    <p><strong>Call:</strong> +2348127285194</p>
-    <p><strong>Location:</strong> Lagos, Nigeria</p>
-    <p><strong>Portfolio:</strong> Available on request</p>
-  </section>
-
-  <div class="footer">
-    &copy; 2025 MyNaitwok Channels (MNC). All Rights Reserved.
   </div>
+</nav>
 
-  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-  <script>AOS.init();</script>
+<!-- Hero -->
+<section class="hero">
+  <div class="container">
+    <h1>Welcome to MyNaitwok Channels (MNC)</h1>
+    <p>Digital Marketing | Media Production | Advertising</p>
+    <a href="#contact" class="btn btn-call mt-3">Get in Touch</a>
+  </div>
+</section>
+
+<!-- Services -->
+<section class="container py-5" id="services">
+  <h2 class="mb-4">Our Services</h2>
+  <div class="row g-4">
+    <div class="col-md-4"><div class="card p-3" data-aos="fade-up" data-aos-delay="100"><h4>Digital Marketing</h4><p>Social Media Ads, Google Ads, Email Marketing, Analytics & Strategy</p></div></div>
+    <div class="col-md-4"><div class="card p-3" data-aos="fade-up" data-aos-delay="200"><h4>Media Production</h4><p>Corporate Videos, Reels, Documentaries, Event Photography, Portraits</p></div></div>
+    <div class="col-md-4"><div class="card p-3" data-aos="fade-up" data-aos-delay="300"><h4>Advertising</h4><p>Billboards, Bus Branding, Banners, Flyers, Newspapers, Magazines, Television Ads</p></div></div>
+    <div class="col-md-4"><div class="card p-3" data-aos="fade-up" data-aos-delay="400"><h4>Content Creation</h4><p>Content Calendars, Graphic Design, Captions, Memes, GIFs</p></div></div>
+    <div class="col-md-4"><div class="card p-3" data-aos="fade-up" data-aos-delay="500"><h4>Influencer Campaigns & PR</h4><p>Press, Reputation Management, Influencer Strategy & Management</p></div></div>
+  </div>
+</section>
+
+<!-- Projects -->
+<section class="container py-5" id="projects">
+  <h2 class="mb-4">Sample Projects</h2>
+  <ul>
+    <li><strong>Women in Renewable:</strong> Clean Cookstove Campaign (10k+ reach)</li>
+    <li><strong>Smiling Simon Greenbuild Foundation:</strong> Sustainability advocacy & media engagement</li>
+  </ul>
+</section>
+
+<!-- Contact -->
+<section id="contact" class="container py-5">
+  <h2 class="mb-4">Contact Us</h2>
+  <p><strong>Email:</strong> <a href="mailto:info.MNC24@gmail.com">info.MNC24@gmail.com</a></p>
+  <p><strong>WhatsApp:</strong> <a href="https://wa.me/2348169075834" target="_blank">+2348169075834</a></p>
+  <p><strong>Call:</strong> <a href="tel:+2348127285194">+2348127285194</a></p>
+  <p><strong>Location:</strong> Lagos, Nigeria</p>
+  <p><strong>Portfolio:</strong> Available on request</p>
+</section>
+
+<!-- Footer with Contact Info + Media Partners -->
+<footer>
+  <div class="container">
+    <div class="row">
+      <!-- Contact Info -->
+      <div class="col-md-6 mb-4">
+        <h5>Contact Us</h5>
+        <p>Email: <a href="mailto:info.MNC24@gmail.com">info.MNC24@gmail.com</a></p>
+        <p>WhatsApp: <a href="https://wa.me/2348169075834" target="_blank">+2348169075834</a></p>
+        <p>Call: <a href="tel:+2348127285194">+2348127285194</a></p>
+        <p>Location: Lagos, Nigeria</p>
+      </div>
+      <!-- Media Partners -->
+      <div class="col-md-6 mb-4">
+        <h5>Media Partners</h5>
+        <ul class="list-unstyled">
+          <li>NTA</li><li>TVC</li>
+          <li>Channels TV</li><li>Arise TV</li>
+          <li>ThisDay Newspaper</li><li>Trydoes</li>
+          <li>Studio 24</li><li>Vanguard Newspaper</li>
+	  <li>Guardian Newspaper</li><li>Sun Newspaper</li>
+        </ul>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      &copy; 2025 MyNaitwok Channels (MNC). All Rights Reserved.
+    </div>
+  </div>
+</footer>
+
+<!-- Scripts -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+<script>AOS.init();</script>
+
 </body>
 </html>
